--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1250,12 +1250,6 @@ section {
     }
 }
 
-
-
-
-/*--------------------------------------------------------------
-# Courses (Course Page)
---------------------------------------------------------------*/
 .coursespanel {
     background-color: #fff;
 }
@@ -1319,10 +1313,24 @@ section {
     border-radius: 40px;
 }
 
+.icon-shape {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    vertical-align: middle
+}
+
+.text-inherit {
+    color: #18113c
+}
 
 
 
-/*    Course View    */
+
+/*--------------------------------------------------------------
+# Single Course Page
+--------------------------------------------------------------*/
 
 #coursename {
     width: 100%;
@@ -1408,7 +1416,10 @@ section {
 
 
 
-/*    Course View Main    */
+/*--------------------------------------------------------------
+# Course Content Page
+--------------------------------------------------------------*/
+
 #coursemainname {
     width: 100%;
     height: 40%;
@@ -1448,15 +1459,6 @@ section {
     border-style: solid;
     border-color: black;
 }
-
-
-
-
-
-
-
-
-
 
 .tablinks {
     float: left;
