--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,25 @@ h6 {
     font-family: "Raleway", sans-serif;
 }
 
+/*--------------------------------------------------------------
+# Scroll-bar
+--------------------------------------------------------------*/
+
+::-webkit-scrollbar {
+    width: 0.80rem;
+    background-color: hsl(230, 12%, 90%);
+    border-radius: 0.45rem;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: hsl(230, 12%, 80%);
+    border-radius: 0.45rem;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: hsl(230, 8%, 65%);
+}
+
 
 
 
