--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -449,6 +449,7 @@ h6 {
 
     #hero .hero-img img {
         width: 50%;
+        background-image: url(/images/arts/IMG_1447.png)
     }
 }
 
@@ -498,8 +499,6 @@ h6 {
         transform: translateY(-10px);
     }
 }
-
-
 
 
 /*--------------------------------------------------------------
