--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -445,6 +445,7 @@ h6 {
 
     #hero .hero-img {
         text-align: center;
+         background-image: url(/images/arts/IMG_1447.png)
     }
 
     #hero .hero-img img {
