--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,7 +62,23 @@ h6 {
 }
 
 
+.image_full{
+   display:block;
+  }
 
+ .image_mobile{
+  display:none;
+ }
+
+@media (max-width: 640px) and (min-width: 320px){
+  .image_full{
+   display:none;
+  }
+
+  .image_mobile{
+   display:block;
+  }
+}
 
 /*--------------------------------------------------------------
 # Header
