--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1352,6 +1352,7 @@ section {
 --------------------------------------------------------------*/
 
 #coursename {
+    padding: 65px 0;
     width: 100%;
     height: 43vh;
     background: #002387;
