--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,25 @@ h6 {
     font-family: "Raleway", sans-serif;
 }
 
+/*--------------------------------------------------------------
+# Scroll-bar
+--------------------------------------------------------------*/
+
+::-webkit-scrollbar {
+    width: 0.80rem;
+    background-color: hsl(230, 12%, 90%);
+    border-radius: 0.45rem;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: hsl(230, 12%, 80%);
+    border-radius: 0.45rem;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: hsl(230, 8%, 65%);
+}
+
 
 
 
@@ -62,24 +81,7 @@ h6 {
 }
 
 
-.image_full{
-   display:block;
-  }
 
- .image_mobile{
-  display:none;
- }
-
-@media (max-width: 640px) and (min-width: 320px){
-  .image_full{
-   display:none;
-  }
-
-  .image_mobile{
-   display:initial;
-      text-align: center;
-  }
-}
 
 /*--------------------------------------------------------------
 # Header
@@ -462,12 +464,10 @@ h6 {
 
     #hero .hero-img {
         text-align: center;
-         background-image: url(/images/arts/IMG_1447.png)
     }
 
     #hero .hero-img img {
         width: 50%;
-        background-image: url(/images/arts/IMG_1447.png)
     }
 }
 
@@ -517,6 +517,8 @@ h6 {
         transform: translateY(-10px);
     }
 }
+
+
 
 
 /*--------------------------------------------------------------
@@ -1267,12 +1269,6 @@ section {
     }
 }
 
-
-
-
-/*--------------------------------------------------------------
-# Courses (Course Page)
---------------------------------------------------------------*/
 .coursespanel {
     background-color: #fff;
 }
@@ -1336,12 +1332,27 @@ section {
     border-radius: 40px;
 }
 
+.icon-shape {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    vertical-align: middle
+}
+
+.text-inherit {
+    color: #18113c
+}
 
 
 
-/*    Course View    */
+
+/*--------------------------------------------------------------
+# Single Course Page
+--------------------------------------------------------------*/
 
 #coursename {
+    padding: 65px 0;
     width: 100%;
     height: 43vh;
     background: #002387;
@@ -1425,7 +1436,10 @@ section {
 
 
 
-/*    Course View Main    */
+/*--------------------------------------------------------------
+# Course Content Page
+--------------------------------------------------------------*/
+
 #coursemainname {
     width: 100%;
     height: 40%;
@@ -1465,15 +1479,6 @@ section {
     border-style: solid;
     border-color: black;
 }
-
-
-
-
-
-
-
-
-
 
 .tablinks {
     float: left;
